--- a/Admin/Tpl/Header/header.html
+++ b/Admin/Tpl/Header/header.html
@@ -11,12 +11,12 @@
 			<ul id="main-nav"> 
 				
 				<li>
-					<a href="###" class="nav-top-item no-submenu">
+					<a href="__APP__/Index/index/" class="nav-top-item no-submenu">
 						修改密码
 					</a>       
 				</li>
 				<li>
-					<a href="###" class="nav-top-item no-submenu">
+					<a href="__APP__/Index/index/" class="nav-top-item no-submenu">
 						管理会员信息
 					</a>       
 				</li>
