add headder and footer

--- a/Home/Tpl/Index/index.html
+++ b/Home/Tpl/Index/index.html
@@ -5,14 +5,18 @@
 <title>浮生若茶</title>
 <load href="__PUBLIC__/css/css.css" />
 <load href="__PUBLIC__/css/slider.css" />
+<link href="__PUBLIC__/css/h_style.css" type="text/css" rel="stylesheet">
+<link rel="stylesheet" href="__PUBLIC__/css/base.css" />
 
 <load href="__PUBLIC__/js/jquery.min.js" />
 <load href="__PUBLIC__/js/Tab.js" />
-<load href="__PUBLIC__/js/common.js" />
-<load href="__PUBLIC__/js/slider.js" />
+
+
+<script src="__PUBLIC__/js/head.js" type="text/javascript"></script>
+
 </head>
 <body>
-<div id="head"> 此处显示 id "head" 的内容 </div>
+<div id="head"> <include file="Public:header" /> </div>
 <!--**************************************************flash******************************************************-->
 <div id="flash"> 
 <header>
@@ -377,7 +381,7 @@
         	<ul>
             	<li class="onegoods"> 
                    <a class="img" target="_blank" href="goods-1004.html" title="【谢裕大】太平猴魁一级200克礼盒装 茶道人生系列 悟 2012年新茶"> 
-                   		<img src="白茶10.png" alt="【谢裕大】太平猴魁一级200克礼盒装 茶道人生系列 悟 2012年新茶"> 
+                   		<img src="__PUBLIC__/images/白茶10.png" alt="【谢裕大】太平猴魁一级200克礼盒装 茶道人生系列 悟 2012年新茶"> 
                     </a>                             
                     <p class="price"><strong>￥588元</strong> </p>
                     <p><a href="#">【谢裕大】太平猴魁一级200克礼盒装 茶道人生系列 悟 2012年新茶</a></p>         
@@ -385,7 +389,7 @@
                  </li>
                  <li class="onegoods"> 
                    <a class="img" target="_blank" href="goods-1004.html" title="【谢裕大】太平猴魁一级200克礼盒装 茶道人生系列 悟 2012年新茶"> 
-                   		<img src="白茶10.png" alt="【谢裕大】太平猴魁一级200克礼盒装 茶道人生系列 悟 2012年新茶"> 
+                   		<img src="__PUBLIC__/images/白茶10.png" alt="【谢裕大】太平猴魁一级200克礼盒装 茶道人生系列 悟 2012年新茶"> 
                     </a>                             
                     <p class="price"><strong>￥588元</strong> </p>
                     <p><a href="#">【谢裕大】太平猴魁一级200克礼盒装 茶道人生系列 悟 2012年新茶</a></p>         
@@ -1272,6 +1276,9 @@
   </div>
 </div>
 <!--**************************************************尾部******************************************************-->
-<div id="foot"> 此处显示 id "foot" 的内容 </div>
+<div id="foot"> 
+<include file="Public:footer" />
+</div>
+
 </body>
 </html>
