--- a/Home/Tpl/Reg/reg.html
+++ b/Home/Tpl/Reg/reg.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<load href="__PUBLIC__/css/css.css" />
+<load href="__PUBLIC__/css/register.css" />
 <load href="__PUBLIC__/js/jquery.min.js" />
 <load href="__PUBLIC__/js/home.data.verify.js" />
 
