--- a/Admin/Tpl/Header/header.html
+++ b/Admin/Tpl/Header/header.html
@@ -1,4 +1,13 @@
-﻿
+﻿		 <load href="__PUBLIC__/css/reset.css" />
+		 <load href="__PUBLIC__/css/style.css" />
+		 <load href="__PUBLIC__/css/invalid.css" />
+
+		 <load href="__PUBLIC__/js/jquery-1.3.2.min.js" />
+		 <load href="__PUBLIC__/js/simpla.jquery.configuration.js" />
+		 <load href="__PUBLIC__/js/facebox.js" />
+		 <load href="__PUBLIC__/js/jquery.wysiwyg.js" />
+		 <load href="__PUBLIC__/js/jquery.datePicker.js" />
+		 <load href="__PUBLIC__/js/jquery.date.js" />
 	   <div id="body-wrapper"> 
 	          <div id="sidebar"><div id="sidebar-wrapper">
 			<h1 id="sidebar-title"><a href="#">Admin Login</a></h1>
