user reg and login,home

--- a/Home/Tpl/Public/footer.html
+++ b/Home/Tpl/Public/footer.html
@@ -1,22 +1,5 @@
 
-
 <load href="__PUBLIC__/css/foot_public.css" />
-
-<script type="text/javascript">
-$(function(){
-    $("body").Sonline({
-        Position:"right",
-        Top:180,
-        Effect:false, 
-        DefaultsOpen:false, 
-        Qqlist:"800002599|售前,800002599|售后"
-    });
-});
-</script>
-</head>
-
-<body>
-
 <div class="help">
 <div class="help_box">
 
@@ -59,7 +42,7 @@ $(function(){
 </div>
 </div>
 <div class="foot_safe">
-<div class="footer"><a rel="nofollow" href="###" target="_blank">关于我们</a>|<a rel="nofollow" href="###" target="_blank">隐私申明</a>|<a rel="nofollow" href="###" target="_blank">成为供应商</a>|<a href="###" target="_blank">社区</a>|<a href="###" target="_blank">茶叶</a>|<a href="###" target="_blank">博客</a>|<a href="###" target="_blank">友情链接</a>|<a href="###" target="_blank">网站地图</a><br>
+<div class="foot"><a rel="nofollow" href="###" target="_blank">关于我们</a>|<a rel="nofollow" href="###" target="_blank">隐私申明</a>|<a rel="nofollow" href="###" target="_blank">成为供应商</a>|<a href="###" target="_blank">社区</a>|<a href="###" target="_blank">茶叶</a>|<a href="###" target="_blank">博客</a>|<a href="###" target="_blank">友情链接</a>|<a href="###" target="_blank">网站地图</a><br>
   <center>Copyright 2014 - 2015 浮生若茶  中山大学南方学院计算机（1）班出品  All Rights Reserved </center>
 </div>
 </div>
