--- a/Admin/Tpl/Header/header.html
+++ b/Admin/Tpl/Header/header.html
@@ -2,7 +2,7 @@
 		 <load href="__PUBLIC__/css/style.css" />
 		 <load href="__PUBLIC__/css/invalid.css" />
 
-		 <load href="__PUBLIC__/js/jquery-1.3.2.min.js" />
+		 <load href="__PUBLIC__/js/jquery.min.js" />
 		 <load href="__PUBLIC__/js/simpla.jquery.configuration.js" />
 		 <load href="__PUBLIC__/js/facebox.js" />
 		 <load href="__PUBLIC__/js/jquery.wysiwyg.js" />
