--- a/Home/Tpl/Reg/reg.html
+++ b/Home/Tpl/Reg/reg.html
@@ -68,10 +68,6 @@
 </form>
 </div>
 <div style="margin-top:135px;">
-<div class="foot_safe">
-<div class="foot"><a rel="nofollow" href="###" target="_blank">关于我们</a>|<a rel="nofollow" href="###" target="_blank">隐私申明</a>|<a rel="nofollow" href="###" target="_blank">成为供应商</a>|<a href="###" target="_blank">社区</a>|<a href="###" target="_blank">茶叶</a>|<a href="###" target="_blank">博客</a>|<a href="###" target="_blank">友情链接</a>|<a href="###" target="_blank">网站地图</a><br>
-  <center>Copyright 2014 - 2015 浮生若茶  中山大学南方学院计算机（1）班出品  All Rights Reserved </center>
-</div>
-</div>
+<include file="Public:footer2" />
 </body>
 </html>
