--- a/Admin/Tpl/Goodsinfo/index.html
+++ b/Admin/Tpl/Goodsinfo/index.html
@@ -43,7 +43,7 @@
 		                 <tr align="center">
 		                      <td><{$vo.pk_GoodsInfo_Id}></td>
 		                      <td><{$vo.Goods_Name}></td>
-		                      <td><img src="<{$vo.Goods_img}>"/></td>
+		                      <td><img src="<{$vo.Goods_img}>" style="width:80px; height:80px;"/></td>
 		                      <td><{$vo.Goods_Price}></td>
 		                      <td id="text"><{$vo.Goods_Intro}></td>
 		                      <td><{$vo.Classifi_Name}></td>
