complete user order

--- a/Admin/Tpl/Header/header.html
+++ b/Admin/Tpl/Header/header.html
@@ -13,7 +13,7 @@
 			<h1 id="sidebar-title"><a href="#">Admin Login</a></h1>
 			<a href="#"><img id="logo" src="__PUBLIC__/images/logo.png" alt="Simpla Admin logo" /></a>
 			<div id="profile-links">
-				Welcome, <a href="浏览自己的信息中心" title="Edit your profile">John Doe</a>!
+				Welcome, <a href="#" title="Edit your profile">John Doe</a>!
 				<br />
 				<a href="__ROOT__/index.php/Index/index" title="View the Site">网站首页</a> | <a href="__APP__/Login/logout" title="Sign Out">注销登录</a>
 			</div>
