--- a/Home/Tpl/Public/header.html
+++ b/Home/Tpl/Public/header.html
@@ -289,7 +289,7 @@
     </div>
     <div class="navCon-menu fl">
       <ul>
-        <li><a href="http://www.jq-school.com">首页</a></li>
+        <li><a href="__APP__/Index/index">首页</a></li>
         <li><a href="http://www.jq-school.com">企业文化</a></li>
       </ul>
     </div>
@@ -298,8 +298,8 @@
 <div id="topcart" style="top: 111px;">
   <div class="cartinfo" id="cartinfo" style="left: 926px;">
     <div class="cartleft">
-      <div class="cart" id="ECS_CARTINFO"> <a href="" title="查看购物车">购物车 <b class="corg">0</b> 件</a> </div>
+      <div class="cart" id="ECS_CARTINFO"> <a href="__APP__/Cart/index" title="查看购物车">购物车 <b class="corg"><{$goodsnum}></b> 件</a> </div>
     </div>
-    <div class="cartright"> <a href=""></a> </div>
+    <div class="cartright"> <a href="__APP__/Order/consignee"></a> </div>
   </div>
 </div>
