--- a/Home/Tpl/Public/header.html
+++ b/Home/Tpl/Public/header.html
@@ -287,19 +287,21 @@
         </ul>
       </div>
     </div>
-    <div class="navCon-menu fl">
+    <div class="navCon-menu fl" style="z-index:50;">
       <ul>
         <li><a href="__APP__/Index/index">首页</a></li>
         <li><a href="http://www.jq-school.com">企业文化</a></li>
       </ul>
     </div>
   </div>
+  
 </div>
 <div id="topcart" style="top: 111px;">
-  <div class="cartinfo" id="cartinfo" style="left: 926px;">
+  <div class="cartinfo" id="cartinfo" style="left: 326px;">
     <div class="cartleft">
       <div class="cart" id="ECS_CARTINFO"> <a href="__APP__/Cart/index" title="查看购物车">购物车 <b class="corg"><{$goodsnum}></b> 件</a> </div>
     </div>
     <div class="cartright"> <a href="__APP__/Order/consignee"></a> </div>
   </div>
 </div>
+
