--- a/Home/Tpl/Cart/index.html
+++ b/Home/Tpl/Cart/index.html
@@ -69,7 +69,7 @@ target div. id must match the href of this div's tab -->
                 <form name="cart['<{$vo.Cart_Id}>']" action="__URL__/modifyNum" method="post">
                 <td font_color="black"  class="num-pallets">
                   
-                    <input type=number class="num-pallets-input" name="num" min=1 value="<{$vo.Num}>" style="width:40px;">
+                    <input type=number class="num-pallets-input" name="num" min=1 max='<{$vo.Goods_Num}>' value="<{$vo.Num}>" style="width:40px;">
                     <input type="submit" value="更改数量"/>
                     <input type="hidden" value="<{$vo.Cart_Id}>" name="cartid" />
                     <input type="hidden" value="<{$vo.Goods_Id}>"name="goodsid" />
