--- a/Admin/Tpl/Classifi/index.html
+++ b/Admin/Tpl/Classifi/index.html
@@ -38,7 +38,7 @@
 	                      <th>分类id</th>
 	                      <th>类别名称</th>
 	                      <th>类别等级</th>
-	                      <th>所属父级id</th>
+	                      <th>商品父级所属ID</th>
 	                      <th>操作</th>
 	                 </tr>
 	                 <volist name="arr" id="vo">
