--- a/Admin/Tpl/Header/header.html
+++ b/Admin/Tpl/Header/header.html
@@ -1,6 +1,8 @@
 ﻿		 <load href="__PUBLIC__/css/reset.css" />
 		 <load href="__PUBLIC__/css/style.css" />
 		 <load href="__PUBLIC__/css/invalid.css" />
+		 <load href="__PUBLIC__/css/public.css" />
+		 <load href="__PUBLIC__/css/page.css" />
 
 		 <load href="__PUBLIC__/js/jquery.min.js" />
 		 <load href="__PUBLIC__/js/simpla.jquery.configuration.js" />
@@ -31,13 +33,13 @@
 				</li>
 				
 				<li> 
-					<a href="#" class="nav-top-item current">
+					<a href="__APP__/Goodsinfo/index" class="nav-top-item">
 					商品管理
 					</a>
 					<ul>
-						<li><a href="#">商品分类管理</a></li>
-						<li><a class="current" href="#">商品信息管理</a></li>
-						<li><a href="#">商品订单管理</a></li>
+						<li><a href="__APP__/Classifi/index">商品分类管理</a></li>
+						<li><a href="__APP__/Goodsinfo/index">商品信息管理</a></li>
+						<li><a href="__APP__/Order/index">商品订单管理</a></li>
 						<li><a href="#">商品评价管理</a></li>
 					</ul>
 				</li>
