--- a/Admin/Tpl/Index/index.html
+++ b/Admin/Tpl/Index/index.html
@@ -3,10 +3,19 @@
      <head>
 	      <title>浮生若茶</title>
 	</head>
+    <style>
+		.welcome{
+			font-size:36px;
+			position:relative;
+			top:100px;
+			margin-left:120px;
+		}
+			
+	</style>
 	<body>
 		<include file="Header:header" />
 		<div id="content">
-			
+			<span class="welcome">欢迎光临！！！</span>
 		</div>
 	</body>
 </html>
