--- a/Home/Tpl/Public/top1.html
+++ b/Home/Tpl/Public/top1.html
@@ -11,7 +11,7 @@
   </div>
 </div>
  <div id="userlogin">
-  <div id="topnav" class="topnav"><a href="login" class="signin"><span>登录</span></a> </div>
+  <div id="topnav" class="topnav"><a href="#" class="signin"><span>登录</span></a> </div>
   <fieldset id="signin_menu">
     <form method="post" id="signin" action="__APP__/Public/doLogin">
       <p>
